# pandaria2.0

./: README.md
pandaria_ws/: README.md
pandaria_ws/src/: README.md
pandaria_ws/src/board_detector/: CMakeLists.txt  README.md  package.xml
pandaria_ws/src/board_detector/src/: boxDetector.py
pandaria_ws/src/board_detector/src/helper_functions/: utils.py
pandaria_ws/src/franka_ros/franka_control/config/: default_controllers.yaml
pandaria_ws/src/pandaria_ros/: CMakeLists.txt  compile_commands.json  package.xml  pandaria_ros_plugin.xml
pandaria_ws/src/pandaria_ros/cfg/: compliance_param.cfg
pandaria_ws/src/pandaria_ros/config/: controllers.yaml  rviz_config.rviz  tasks.yaml
pandaria_ws/src/pandaria_ros/include/: cartesian_impedance_controller.h  force_controller.h  gripper.h  helpers.hpp  planner.h  task.h  task_button.h  task_coordinator.h  task_key.h  task_start_pose.h  yaml_parser.hpp
pandaria_ws/src/pandaria_ros/launch/: bringup.launch
pandaria_ws/src/pandaria_ros/src/: cartesian_impedance_controller.cpp  force_controller.cpp  gripper.cpp  planner.cpp  task_button.cpp  task_coordinator.cpp  task_key.cpp  task_start_pose.cpp
pandaria_ws/src/tf2_static_filters/: .clang-format  CMakeLists.txt  compile_commands.json  package.xml
pandaria_ws/src/tf2_static_filters/src/: taskboard_center_filter.cpp  taskboard_refined_filter.cpp
