<?xml version="1.0"?>
<package format="2">
    <name>pandaria_ros</name>
    <version>0.0.0</version>
    <description>The Pandaria 2.0 ROS package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="benjamin.bogenberger@tum.de">benni</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/my_controller</url> -->


    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>eigen</build_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>franka_hw</depend>
    <depend>franka_gripper</depend>
    <depend>franka_example_controllers</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>moveit_visual_tools</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_core</depend>
    <depend>panda_moveit_config</depend>
    <depend>joint_trajectory_controller</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>pluginlib</depend>
    <depend>board_detector</depend>
    <depend>tf2_static_filters</depend>

    <export>
        <controller_interface plugin="${prefix}/pandaria_ros_plugin.xml" />
    </export>
</package>